--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header id="header">
   <div class="inner">
-    <a href="{{ "/" | relative_url }}" class="image avatar"><img src="{{ site.logo | relative_url }}" alt="{{ site.title | escape }}" /></a>
+    <a href="{{ "/" | relative_url }}" class="image avatar"><img src="https://github.com/NatalieRMCastro/website/blob/master/assets/images/avatar.png" alt="{{ site.title | escape }}" /></a>
     <h1>
       <strong>{{ site.title | escape }}</strong><br />
       {{ site.description | escape }}
