--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header id="header">
   <div class="inner">
-    <a href="{{ "/" | relative_url }}" class="image avatar"><img src="assets/images/avatar.png" alt="{{ site.title | escape }}"width="300" height="300" /></a>
+    <a href="{{ "/" | relative_url }}" class="image avatar"><img src="assets/images/avatar.png" alt="{{ site.title | escape }} /></a>
     <h1>
       <strong>{{ site.title | escape }}</strong><br />
       {{ site.description | escape }}
