--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: default
             <div class="post-excerpt">
               <p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
               <ul class="actions">
-                <li><a href="{{ post.url | relative_url }}" class="button">Continue Reading</a></li>
+                <li><a href="{{ post.url | relative_url }}" class="button">see more</a></li>
               </ul>
             </div>
           {%- endif -%}
