--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,4 +7,8 @@
       {{ site.description | escape }}
     </h1>
   </div>
+
+  <ul class="actions">
+                <li><a href="" class="button">about</a></li>
+              </ul>
 </header>
