--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,6 @@
   </div>
 
   <ul class="actions">
-                <li><a href="" class="button">about</a></li>
+                <li><a href="_posts/2023-12-27-About-Me.md" class="button">about</a></li>
               </ul>
 </header>
