--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
   <!-- Navigation -->
   <nav id="navigation">
     <ul class="links">
-      <li><a href="#" onclick="loadContent('about.html'); return false;">about</a></li>
+      <li><a href="https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html" onclick="loadContent('2023-12-27-About-Me.md'); return false;">about</a></li>
       <li><a href="#" onclick="loadContent('projects.html'); return false;">projects</a></li>
       <li><a href="#" onclick="loadContent('contact.html'); return false;">contact</a></li>
     </ul>
