--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
   <nav id="navigation">
     <ul class="links">
       <li><a href="https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html" onclick="loadContent('https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html'); return false;">about</a></li>
-      <li><a href="#" onclick="loadContent('projects.html'); return false;">projects</a></li>
+      <li><a href="https://nataliermcastro.github.io/website/2023/12/27/Contact.html" onclick="loadContent('https://nataliermcastro.github.io/website/2023/12/27/Contact.html'); return false;">projects</a></li>
       <li><a href="#" onclick="loadContent('contact.html'); return false;">contact</a></li>
     </ul>
   </nav>
