--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
@@ -13,23 +14,24 @@ layout: default
     <section class="post-list">
       <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
       {%- for post in site.posts -%}
-        <hr>
-        <section class="post-list-item">
-          <header>
-            <h3><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
-            <p class="post-meta">{{ post.date | date: date_format }}</p>
-          </header>
-          {%- if site.show_excerpts -%}
-            <div class="post-excerpt">
-              <p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
-              <ul class="actions">
-                <li><a href="{{ post.url | relative_url }}" class="button">see more</a></li>
-              </ul>
-            </div>
-          {%- endif -%}
-        </section>
+        {%- if post.published != false and post.in_feed != false -%}
+          <hr>
+          <section class="post-list-item">
+            <header>
+              <h3><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
+              <p class="post-meta">{{ post.date | date: date_format }}</p>
+            </header>
+            {%- if site.show_excerpts -%}
+              <div class="post-excerpt">
+                <p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+                <ul class="actions">
+                  <li><a href="{{ post.url | relative_url }}" class="button">see more</a></li>
+                </ul>
+              </div>
+            {%- endif -%}
+          </section>
+        {%- endif -%}
       {%- endfor -%}
     </section>
   {%- endif -%}
-
 </div>
