--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,8 @@ layout: default
     {{ content }}
   </div>
 
+  <div id="post-container"></div>
+
   {%- if site.posts.size > 0 -%}
     {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%}
     <section class="post-list">
@@ -23,14 +25,6 @@ layout: default
               <h3><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
               <p class="post-meta">{{ post.date | date: date_format }}</p>
             </header>
-            {%- if site.show_excerpts -%}
-              <div class="post-excerpt">
-                <p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
-                <ul class="actions">
-                  <li><a href="{{ post.url | relative_url }}" class="button">see more</a></li>
-                </ul>
-              </div>
-            {%- endif -%}
           </section>
         {%- endif -%}
       {%- endfor -%}
@@ -47,7 +41,7 @@ layout: default
 
       // Fetch the content of the clicked link
       var url = $(this).attr('href');
-      $('#content-container').load(url + ' #content-container > *');
+      $('#post-container').load(url + ' #content-container > *');
     });
   });
 </script>
