--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,11 +7,7 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  <div id="content-container">
-    {{ content }}
-  </div>
-
-  <div id="post-container"></div>
+  {{ content }}
 
   {%- if site.posts.size > 0 -%}
     {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%}
@@ -25,23 +21,17 @@ layout: default
               <h3><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
               <p class="post-meta">{{ post.date | date: date_format }}</p>
             </header>
+            {%- if site.show_excerpts -%}
+              <div class="post-excerpt">
+                <p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+                <ul class="actions">
+                  <li><a href="{{ post.url | relative_url }}" class="button">see more</a></li>
+                </ul>
+              </div>
+            {%- endif -%}
           </section>
         {%- endif -%}
       {%- endfor -%}
     </section>
   {%- endif -%}
 </div>
-
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-  $(document).ready(function () {
-    // Intercept click on post links
-    $('.post-link').on('click', function (e) {
-      e.preventDefault(); // Prevent default link behavior
-
-      // Fetch the content of the clicked link
-      var url = $(this).attr('href');
-      $('#post-container').load(url + ' #content-container > *');
-    });
-  });
-</script>
