--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
   <!-- Navigation -->
   <nav id="navigation">
     <ul class="links">
-      <li><a href="https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html" onclick="loadContent('https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html'); return false;">about</a></li>
+      <li><a href="https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html">about</a></li>
       <li><a href="#" onclick="loadContent('#'); return false;">projects</a></li>
       <li><a href="https://nataliermcastro.github.io/website/2023/12/27/Get-In-Touch.html" onclick="loadContent('https://nataliermcastro.github.io/website/2023/12/27/Get-In-Touch.html'); return false;">contact</a></li>
     </ul>
