--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,9 @@
   <!-- Navigation -->
   <nav id="navigation">
     <ul class="links">
-      <a href="https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html">about</a>
-      <a href="#https://nataliermcastro.github.io/website/>projects</a>
-      <a href="https://nataliermcastro.github.io/website/2023/12/27/Get-In-Touch.html">contact</a>
+      <a href="https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html">about</a><br>
+      <a href="https://nataliermcastro.github.io/website/>projects"</a><br>
+      <a href="https://nataliermcastro.github.io/website/2023/12/27/Get-In-Touch.html">contact</a><br>
     </ul>
   </nav>
 </header>
