--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
   <nav id="navigation">
     <ul class="links">
       <a href="https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html">about</a><br>
-      <a href="https://nataliermcastro.github.io/website/"</a><br>
+      <a href="https://nataliermcastro.github.io/website/">projects</a><br>
       <a href="https://nataliermcastro.github.io/website/2023/12/27/Get-In-Touch.html">contact</a><br>
     </ul>
   </nav>
