--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="home">
+  {%- include header.html -%}
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
