--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header id="header">
   <div class="inner">
-    
+    <class="image avatar"><img src="website/assets/images/avatar.prg" alt ="Photo of Natalie" width = "300"/></img src></class>
     <h1>
       <strong>{{ site.title | escape }}</strong><br />
       {{ site.description | escape }}
