--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header id="header">
   <div class="inner">
-    <a href="{{ "/" | relative_url }}" class="image avatar"><img src="website/assets/images/avatar.png" alt="Photo of Natalie" width="300" /></a>
+    <img src="website/assets/images/avatar.png" alt="Photo of Natalie" width="300" />
 
     <h1>
       <strong>{{ site.title | escape }}</strong><br />
