--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header id="header">
   <div class="inner">
-    <a href="{{ "/" | relative_url }}" class="image avatar"><img src="assets/images/avatar.png" alt="Photo of Natalie" width="300" /></a>
+    <a href="{{ "/" | relative_url }}" class="image avatar"><img src="46530062a0bd0afc0fcff1f7769167fd2e5d5764/assets/images/avatar.png" alt="Photo of Natalie" width="300" /></a>
 
     <h1>
       <strong>{{ site.title | escape }}</strong><br />
