--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,24 @@
-  <!-- Header -->
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* Style for the links */
+    #navigation a {
+      color: darkblue; /* You can adjust the color to your preference */
+      text-decoration: none; /* Optional: Remove underline if you don't want it */
+    }
+
+    /* Optional: Style for visited links */
+    #navigation a:visited {
+      color: darkblue;
+    }
+  </style>
+</head>
+<body>
+
+
+<!-- Header -->
 <header id="header">
   <div class="inner">
     <a href="{{ "/" | relative_url }}" class="image avatar"><img src="{{ site.logo | relative_url }}" alt="{{ site.title | escape }}" /></a>
