--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
     <ul class="links">
       <a href="https://nataliermcastro.github.io/website/misc/2023/12/27/About-Me.html">about</a><br>
       <a href="https://nataliermcastro.github.io/website/">projects</a><br>
-      <a href="https://nataliermcastro.github.io/website/misc/2023/12/27/Resume.html">resume</a><br>
+      <a href="https://nataliermcastro.github.io/website/_posts/2024-10-08-Resume.md">resume</a><br>
       <a href="https://nataliermcastro.github.io/website/2023/12/27/Get-In-Touch.html">contact</a><br>
     </ul>
   </nav>
