--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,10 +31,10 @@
   <!-- Navigation -->
   <nav id="navigation">
     <ul class="links">
-      <a href="_posts/2024-10-22-About-Me.md">about</a><br>
-      <a href="https://nataliermcastro.github.io/website/">projects</a><br>
+      <a href="../_posts/2024-10-22-About-Me.md">about</a><br>
+      <a href="https://nataliermcastro.github.io/">projects</a><br>
       <a href="../_posts/2024-10-08-Resume.md">resume</a><br>
-      <a href="https://nataliermcastro.github.io/website/2023/12/27/Get-In-Touch.html">contact</a><br>
+      <a href="https://nataliermcastro.github.io/2023/12/27/Get-In-Touch.html">contact</a><br>
     </ul>
   </nav>
 </header>
