--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav id="navigation">
     <ul class="links">
-      <a href="../_posts/2024-10-22-About-Me.md">about</a><br>
+      <a href="https://nataliermcastro.github.io/projects/2024/10/22/About-Me.html">about</a><br>
       <a href="https://nataliermcastro.github.io/">projects</a><br>
       <a href="https://nataliermcastro.github.io/projects/2024/10/08/Resume.html">resume</a><br>
       <a href="https://nataliermcastro.github.io/2023/12/27/Get-In-Touch.html">contact</a><br>
