--- a/_sass/strata/_vars.scss
+++ b/_sass/strata/_vars.scss
@@ -20,7 +20,7 @@ $spacing-unit: 30px !default;
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', Helvetica, sans-serif),
+		family:				('Libre Baskerville', Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
 		weight:				400,
 		weight-bold:		400
