--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
     <ul class="links">
       <a href="https://nataliermcastro.github.io/projects/2024/10/22/About-Me.html">about</a><br>
       <a href="https://nataliermcastro.github.io/">projects</a><br>
-      <a href="https://nataliermcastro.github.io/projects/2024/10/08/Resume.html">resume</a><br>
+      <a href="https://nataliermcastro.github.io/projects/2024/11/19/Resume.hmtl">resume</a><br>
       <a href="https://nataliermcastro.github.io/2023/12/27/Get-In-Touch.html">contact</a><br>
     </ul>
   </nav>
