--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,13 @@
   <style>
     /* Style for the links */
     #navigation a {
-      color: white; /* You can adjust the color to your preference */
+      color: blue; /* You can adjust the color to your preference */
       text-decoration: none; /* Optional: Remove underline if you don't want it */
     }
 
     /* Optional: Style for visited links */
     #navigation a:visited {
-      color: white;
+      color: blue;
     }
   </style>
 </head>
