--- a/_sass/strata.scss
+++ b/_sass/strata.scss
@@ -1056,7 +1056,7 @@ $size-header-pad: 4em;
 		@include vendor('justify-content', 'space-between');
 		background-color:		_palette(accent2, bg);
 		background-attachment:	scroll,								scroll;
-		background-image:		url('images/overlay.png'),			url('../../assets/images/bg.jpg');
+		background-image:		url('images/overlay.png'),			url('../../assets/images/bg (2).jpg');
 		background-position:	top left,							top left;
 		background-repeat:		repeat,								no-repeat;
 		color: _palette(accent2, fg);
