--- a/_sass/strata/_vars.scss
+++ b/_sass/strata/_vars.scss
@@ -39,9 +39,9 @@ h1, h2, h3, h4, h5, h6 {
 // Palette.
 $palette: (
 	bg:					#fff,
-	fg:					#000,
+	fg:					#00F,
 	fg-bold:			#787878,
-	fg-light:			#b2b2b2,
+	fg-light:			#000,
 	border:				#efefef,
 	border-bg:			#f7f7f7,
 	border2:			#dfdfdf,
@@ -62,7 +62,7 @@ $palette: (
 		bg:				#1f1815,
 		fg:				rgba(255,255,255,0.5),
 		fg-bold:		#ffffff,
-		fg-light:		rgba(255,255,255,0.4),
+		fg-light:		rgba(0,0,0,0.4),
 		border:			rgba(255,255,255,0.25),
 		border-bg:		rgba(255,255,255,0.075),
 		border2:		rgba(255,255,255,0.5),
