--- a/_sass/strata/_vars.scss
+++ b/_sass/strata/_vars.scss
@@ -61,7 +61,7 @@ $palette: (
 	accent2: (
 		bg:				#1f1815,
 		fg:				rgba(255,255,255,0.5),
-		fg-bold:		#ffffff,
+		fg-bold:		#00F,
 		fg-light:		rgba(0,0,0,0.4),
 		border:			rgba(255,255,255,0.25),
 		border-bg:		rgba(255,255,255,0.075),
