--- a/_sass/strata/_vars.scss
+++ b/_sass/strata/_vars.scss
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 // Palette.
 $palette: (
 	bg:					#fff,
-	fg:					#00F,
+	fg:					#000,
 	fg-bold:			#787878,
 	fg-light:			#000,
 	border:				#efefef,
