--- a/_sass/strata.scss
+++ b/_sass/strata.scss
@@ -168,7 +168,7 @@ $size-header-pad: 4em;
 	}
 
 	h1 {
-		color: #00F; /* Blue */
+		color: #00F !important; /* Blue */
 		font-size: 2em;
 		line-height: 1.5em;
 	}
