--- a/_sass/strata.scss
+++ b/_sass/strata.scss
@@ -1193,7 +1193,7 @@ $size-header-pad: 4em;
 		}
 
 		.caption {
-			background: #00F;
+			background: #f2f2ff;
 			bottom: 0;
 			cursor: default;
 			font-size: 0.9em;
